# tracker

./: .gitignore  index.html  package.json  vite.config.ts
src/: main.ts  style.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  tracker.rs
